# Orion-Os

./: .gitignore  ARQUITETURA.md  ARQUITETURA.txt  CLAUDE.md  PLANO_IMPLEMENTACAO.md  README.md  pyproject.toml
config/: orion.yaml  prompt_sistema.txt
docs/: index.html  journal.md  sobre.html  sobre.md
docs/edr/: EDR-0018-arquitetura-tcc.md  EDR-0019-divisao-final-e-ssd.md  EDR-0020-behavior-core.md  README.md
docs/hardware/: wiring_arduino.md
docs/posts/: 2026-07-16.html  2026-07-17-aparte-pi-connect-caindo-nao-e-do-orion-os.html  2026-07-17-cap-12-s-8-fusao-de-sensores-motion-position.html  2026-07-17-continuacao.html  2026-07-17-correcao-do-achado-do-monitorheartbeat-bug-de-import-circular.html  2026-07-17-fase-5.html  2026-07-17-fase-6.html  2026-07-17-fase-7-inicio-motion-core-navegacao.html  2026-07-17-fase-8-continuacao-configuracao-as-5-paginas-completas.html  2026-07-17-fase-8-continuacao-dashboard-web-do-raspberry.html  2026-07-17-fase-8-continuacao-diagnostico-e-conversa.html  2026-07-17-fase-8-continuacao-mapa-polar-do-radar.html  2026-07-17-fase-8-continuacao-validado-ao-vivo-no-notebook.html  2026-07-17-fase-8-inicio-avatar-sentinelinha.html  2026-07-17-fechando-o-item-3-da-fase-7-flakiness-do-ack.html  2026-07-17-marco-sistema-inteiro-rodando-de-ponta-a-ponta-pela-primeira-vez.html  (+46 more)
motion_core/: README.md  __init__.py  __main__.py
tests/: README.md  conftest.py
tools/: README.md  build_blog.py  cadastrar_de_fotos.py  cadastrar_dono.py  capturar_frame.py  check.sh  conversar_fofao.py  diag_nivel.py  diag_pan.py  montar_panorama.py  orion-avatar-kiosk.desktop  orion-avatar.service  orion-motion.service  panorama.py  preview_avatar.py  preview_webui.py  sim_arduino.py  sim_raspberry.py  testar_imu.py  testar_pan_tilt.py  testar_so_pan.py  testar_ultrassom.py
(+175 files in other folders)
