[project]
name = "orion-os"
version = "0.1.0"
description = "ORION OS - plataforma de robotica modular offline"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "pytest-asyncio>=0.23"]
mission = ["ollama", "faster-whisper", "sounddevice", "numpy", "piper-tts", "openwakeword"]
vision = [
    "opencv-python>=4.9",
    "ultralytics>=8.2",
    "face-recognition>=1.3",
    "face-recognition-models @ git+https://github.com/ageitgey/face_recognition_models",
    # face_recognition_models usa pkg_resources; setuptools >=81 removeu esse
    # modulo (deprecado, remocao prevista p/ 2025-11-30) - fixar <81 ate a
    # lib atualizar. Sem isso, o import de face_recognition trava o processo
    # inteiro com um quit() interno (nao da so ImportError).
    "setuptools<81",
]
display = ["aiohttp>=3.9"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src", "."]   # "." expoe motion_core/ como pacote importavel
markers = ["sim: testes de integracao com simuladores"]
